# AnimeDBParser-Exporter

./: .gitignore  main.py  manual_setup.sh  pyproject.toml  replit.nix
configs/: abstract_classes.py  connected_modules.py  factory.py  redis.conf  settings.py
diagnostic/: count_lines.py
lib/: custom_types.py  factory.py  interfaces.py  proxy_checker.py  requests_connections.py  tools.py  types.py
modules/animebuff_ru/: config.py  web_page_tools.py
modules/animego_org/: config.py  web_page_tools.py
modules/common/: application_objects.py  connected_modules.py  main_service.py
modules/flask/: application.py  celery_tasks.py  command_service.py  handlers.py  routes.py  services.py
modules/general/: main.py  main_tools.py  proxy_checker.py  requests_connections.py  tools.py  web_exporter.py  web_page_tools.py
modules/web_services/: web_exporter.py  web_page_tools.py
sh_scripts/: celery_worker_up.sh  redis_up.sh
static/css/: sidebar.css
static/js/: action.js  alert_utils.js  dropdown_tab_changer.js  modal_show.js  offcanvas_content_change.js  pills_content_changer.js  send_setup.js  utils.js
templates/: _inherited_base.html  _inherited_carcas.html  _template_alert_message.html  _template_block_scripts.html  _template_exported_titles.html  _template_footer_menu.html  _template_modal_window.html  _template_modules_settings.html  _template_navbar_menu.html  _template_offcanvas_sides.html  _template_parsed_titles.html  _template_progress_accordion.html  _template_progress_bar.html  index.html  templates.py
