[tool.poetry]
package-mode = false
name = "CinemaDBParser-Exporter"
version = "0.5.1"
description = "Web tool for exporting/importing title (media) lists between web platforms."
authors = ["DAnGeL4 <Lazukad@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
requests = "^2.28.1"
cfscrape = "^2.1.1"
pydantic = "^1.9.2"
PySocks = "^1.7.1"
billiard = "4.1.0"
flask-session2 = "1.3.1"
celery = "5.3.1"
flask-caching = "2.0.2"
redis = "4.6.0"
lib = "^4.0.0"
modules = "^1.0.0"
bs4 = "^0.0.1"
configs = "^3.0.3"
proxybroker2 = "2.0.0a4"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
